--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 6379
 
   mafia-bot:
+    depends_on:
+      - redis
     build: .
     environment:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
