--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,5 @@ services:
     environment:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - REDIS_HOST=redis
+      - LOCALE_LANG_COUNTRY=${LOCALE_LANG_COUNTRY}
+      - ZEUS_ID=${ZEUS_ID}
